gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-custom_test_frameworks.rs
#![test_runner(main)] // { dg-error ".E0658." "" { target *-*-* } }

#[test_case] // { dg-error ".E0658." "" { target *-*-* } }
fn f() {}

fn main() {}

